fix menu on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1088,7 +1088,6 @@
     width: 100%;
     height: 0;
     background: #ffffff;
-    z-index: 0;
     top: 0;
     left: 0;
     z-index: 100;
@@ -1099,12 +1098,8 @@
   body.noScroll::after {
     content: "";
     height: 100%;
-    background: red;
     top: 0;
     left: 0;
-    -webkit-transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
-    -o-transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
-    transition: all 0.7s cubic-bezier(0.25, 0.8, 0.25, 1) 0s !important;
   }
   .main-header {
     padding: 10px 0;
